--- a/package.json
+++ b/package.json
@@ -4,16 +4,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.4.0",
+    "axios": "^1.3.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "firebase": "^9.20.0",
+    "http-proxy-middleware": "^2.0.6",
+    "mdb-react-ui-kit": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^3.3.2",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.10.0",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +51,6 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "^5.0.1"
+    "gh-pages": "^5.0.0"
   }
 }
